[package]
name = "jira_stopwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ctrlc = "3.4.0"
clap = { version = "4.0", features = ["derive"]}
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }